remove metadatav13 for pallets
