# src/controllers/pallets/PalletsStorageController.ts
@@ -35,7 +35,7 @@ export default class PalletsStorageController extends AbstractController<Pallets
 
 	private getStorageItem: RequestHandler = async (
 		{
-			query: { at, key1, key2, metadata, adjustMetadataV13 },
+			query: { at, key1, key2, metadata },
 			params: { palletId, storageItemId },
 		},
 		res
@@ -43,7 +43,6 @@ export default class PalletsStorageController extends AbstractController<Pallets
 		const key1Arg = typeof key1 === 'string' ? key1 : undefined;
 		const key2Arg = typeof key2 === 'string' ? key2 : undefined;
 		const metadataArg = metadata === 'true';
-		const adjustMetadataV13Arg = adjustMetadataV13 === 'true';
 
 		const hash = await this.getHashFromAt(at);
 		const historicApi = await this.api.at(hash);
@@ -58,17 +57,15 @@ export default class PalletsStorageController extends AbstractController<Pallets
 				key1: key1Arg,
 				key2: key2Arg,
 				metadata: metadataArg,
-				adjustMetadataV13Arg,
 			})
 		);
 	};
 
 	private getStorage: RequestHandler = async (
-		{ params: { palletId }, query: { at, onlyIds, adjustMetadataV13 } },
+		{ params: { palletId }, query: { at, onlyIds } },
 		res
 	): Promise<void> => {
 		const onlyIdsArg = onlyIds === 'true';
-		const adjustMetadataV13Arg = adjustMetadataV13 === 'true';
 
 		const hash = await this.getHashFromAt(at);
 		const historicApi = await this.api.at(hash);
@@ -79,7 +76,6 @@ export default class PalletsStorageController extends AbstractController<Pallets
 				hash,
 				palletId: stringCamelCase(palletId),
 				onlyIds: onlyIdsArg,
-				adjustMetadataV13Arg,
 			})
 		);
 	};
